docs: presentation template

--- a/TP2/docs/presentacion/presentacion.tex
+++ b/TP2/docs/presentacion/presentacion.tex
@@ -25,7 +25,7 @@
     The Hong Kong University of Science and Technology(GZ) \\
 }
 \date{\small \today}
-%\usepackage{HKUSTstyle}
+\usepackage{HKUSTstyle}
 \usepackage{blkarray}
 
 % defs
@@ -56,7 +56,7 @@
     \vspace*{-0.6cm}
     \begin{figure}[htpb]
         \begin{center}
-            \includegraphics[keepaspectratio, scale=0.02]{pic/itba.png}
+            \includegraphics[keepaspectratio, scale=0.15]{pic/itba.png}
         \end{center}
     \end{figure}
 \end{frame}
